--- a/Ex-css-day1/ex1/style.css
+++ b/Ex-css-day1/ex1/style.css
@@ -1,15 +1,15 @@
 input[type="checkbox"] {
   position: relative;
   appearance: none;
-  padding-left: 20px;
-  display: inline;
   outline: none;
+  display: flex;
+  align-items: center;
 }
 input[type="checkbox"]::before {
   position: absolute;
   content: "";
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   border: 1px solid black;
   border-radius: 5px;
   top: 0;
@@ -17,9 +17,16 @@ input[type="checkbox"]::before {
 }
 input[type="checkbox"]:checked::after {
   position: absolute;
-  content: "\2714";
+  content: "";
   font-size: 13px;
-  font-weight: 700;
-  left: 4px;
+  transform: rotate(45deg);
+  left: 7px;
   top: 1px;
+  width: 7px;
+  height: 12px;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+}
+label {
+  margin-left: 30px;
 }
