--- a/scss/state/_state.scss
+++ b/scss/state/_state.scss
@@ -1,14 +1,3 @@
-.flex {
-  display: flex;
-}
-.flex-1 {
-  flex: 1;
-}
-.flex-between {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 .is-hidden {
   display: none;
 }
@@ -20,6 +9,9 @@
 }
 .text-left {
   text-align: left;
+}
+.text-right {
+  text-align: right;
 }
 .bg-primary {
   background-color: map-get($colors, primary);
