--- a/scss/state/_text.scss
+++ b/scss/state/_text.scss
@@ -4,3 +4,12 @@
 .lowercase {
   text-transform: lowercase;
 }
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
