Add style and fix convention

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -29,11 +29,12 @@ $colors: (
   border-gray: #e4e4e4,
   border-gray1: #ededed,
   border-gray-light: #f0f0f0,
-  bg-gray: #e9eaec,
+  bg-gray: #f7f7f7,
   bg-green: #131d33,
   txt-gray2: #b9b9b9,
   txt-gray3: #848484,
   txt-gray4: #a8a8a8,
+  txt-gray5: #9c9c9c,
   txt-bold: #222222
 );
 
