--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,6 +6,7 @@ body {
   font-weight: map-get($font-weight, normal);
   font-size: $font-size-base;
   letter-spacing: -.025em;
+  -webkit-font-smoothing: antialiased;
 }
 p {
   line-height: 1.45;
