--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,8 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 0.875rem;
-  letter-spacing: -.025em; }
+  letter-spacing: -.025em;
+  -webkit-font-smoothing: antialiased; }
 
 p {
   line-height: 1.45; }
@@ -509,7 +510,8 @@ h6 {
   font-size: 16px;
   font-size: 1rem;
   color: #fff;
-  align-items: center; }
+  align-items: center;
+  font-weight: bold; }
   .btn-readmore i {
     font-size: 16px;
     font-size: 1rem;
@@ -558,30 +560,42 @@ h6 {
   .dropdown:hover > a:after {
     color: #fa9928; }
   .dropdown:hover > ul {
-    padding: 5px;
-    padding: 0.3125rem;
+    padding: 10px 20px;
+    padding: 0.625rem 1.25rem;
     border-bottom: 2px solid #fa9928;
     top: 100%;
+    left: 0%;
     position: absolute;
     display: block;
     background-color: #131d33;
     z-index: 100; }
     .dropdown:hover > ul li {
-      padding: 10px;
-      padding: 0.625rem;
+      padding: 15px;
+      padding: 0.9375rem;
       width: 200px;
-      width: 12.5rem; }
+      width: 12.5rem;
+      align-items: center; }
       .dropdown:hover > ul li > a, .dropdown:hover > ul li > a:after {
         color: #fff;
         font-weight: 400; }
     .dropdown:hover > ul li:hover {
+      position: relative;
       background-color: #fa9928; }
-      .dropdown:hover > ul li:hover > a:after {
+      .dropdown:hover > ul li:hover::after {
+        right: 15px;
+        right: 0.9375rem;
+        font-size: 10px;
+        font-size: 0.625rem;
+        position: absolute;
+        content: "\003E";
         color: #fff; }
-  .dropdown .drop-sub {
-    z-index: 200;
-    top: 0;
-    left: 100%; }
+      .dropdown:hover > ul li:hover > a {
+        color: #fff; }
+  .dropdown .drop-sub a::after {
+    display: none; }
+  .dropdown .drop-sub ul {
+    top: 0 !important;
+    left: 100% !important; }
 
 .sec-title {
   font-size: 32px;
@@ -837,21 +851,6 @@ h6 {
     color: #848484;
     font-weight: 300; }
 
-.page-header .outer-box .search-box {
-  padding-right: 20px;
-  padding-right: 1.25rem;
-  display: flex;
-  align-items: center; }
-  .page-header .outer-box .search-box .btn-search i {
-    font-size: 16px;
-    font-size: 1rem; }
-
-.page-header .outer-box .wrapper-button {
-  padding: 30px;
-  padding: 1.875rem;
-  border-right: 1px solid #ededed;
-  border-left: 1px solid #ededed; }
-
 .section-widgets {
   border: 1px solid rgba(255, 255, 255, 0.1); }
   .section-widgets .col-4 {
@@ -1013,16 +1012,62 @@ h6 {
       left: 20%;
       border: 1px solid #fa9928; }
 
+.outer-box .search-box {
+  padding-right: 20px;
+  padding-right: 1.25rem;
+  display: flex;
+  align-items: center;
+  position: relative; }
+  .outer-box .search-box .form-search {
+    padding: 20px;
+    padding: 1.25rem;
+    background-color: #fff;
+    position: absolute;
+    z-index: 10;
+    top: 100%;
+    right: 0;
+    border: 2px solid #fa9928; }
+    .outer-box .search-box .form-search .form-control {
+      width: 250px;
+      width: 15.625rem;
+      height: 40px;
+      height: 2.5rem;
+      padding: 10px 25px 10px 10px;
+      padding: 0.625rem 1.5625rem 0.625rem 0.625rem; }
+    .outer-box .search-box .form-search .btn-search {
+      right: 30px;
+      right: 1.875rem;
+      position: absolute;
+      top: 40%; }
+  .outer-box .search-box .btn-search i {
+    font-size: 16px;
+    font-size: 1rem; }
+
+.outer-box .wrapper-button {
+  padding: 30px;
+  padding: 1.875rem;
+  border-right: 1px solid #ededed;
+  border-left: 1px solid #ededed; }
+
+.collapse {
+  display: none; }
+
+.collapse.show {
+  display: block; }
+
 .section-slideshow {
   position: relative;
   z-index: 1; }
   .section-slideshow .btn-action {
+    display: none; }
+  .section-slideshow:hover .btn-action {
     position: absolute;
+    display: block;
     z-index: 100;
     top: 50%; }
-  .section-slideshow .btn-next {
+  .section-slideshow:hover .btn-next {
     left: 0; }
-  .section-slideshow .btn-back {
+  .section-slideshow:hover .btn-back {
     right: 0; }
   .section-slideshow .slide-list {
     z-index: 2; }
@@ -1115,13 +1160,12 @@ h6 {
   height: 3.5rem;
   right: 20px;
   right: 1.25rem;
-  top: -66px;
-  top: -4.125rem;
+  top: 750px;
+  top: 46.875rem;
   position: fixed;
   border-radius: 50%;
   background-color: inherit;
   border: 2px solid #fa9928;
-  position: relative;
   float: right;
   outline: none;
   transition: .4s ease-in-out;
@@ -1144,7 +1188,7 @@ h6 {
 .is-hidden {
   display: none; }
 
-.is-show {
+.show {
   display: block !important; }
 
 .padding-0 {
